@@ -30,7 +30,8 @@ module Webrat
 
     def find_button(value = nil)
       return fields_by_type([ButtonField]).first if value.nil?      
-      possible_buttons = fields_by_type([ButtonField])      
+      possible_buttons = fields_by_type([ButtonField])
+      possible_buttons.detect { |possible_button| possible_button.matches_id?(value) } ||
       possible_buttons.detect { |possible_button| possible_button.matches_value?(value) }
     end
 
